# adversarial-training-box

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
adversarial_training_box/: __about__.py  __init__.py  experiment_tracker.py  training.py
adversarial_training_box/adversarial_attack/: adversarial_attack.py  auto_attack_module.py  clever_hans_attack.py  cleverhans_attack.py  fgsm_attack.py  foolbox_attack.py  pgd_attack.py  random_fgsm_attack.py
adversarial_training_box/database/: attribute_dict.py  experiment_tracker.py
adversarial_training_box/models/: cifar_6_500.py  cifar_7_1024.py  cnn.py  cnn_madry.py  cnn_yang.py  conv_big.py  conv_madry.py  conv_yang.py  ffn.py  mnist_nn.py  mnist_relu_4_1024.py  resnet_18.py  resnet_4b.py
adversarial_training_box/pipeline/: early_stoper.py  early_stopper.py  mix_up_training_module.py  pipeline.py  standard_test_module.py  standard_training_module.py  test_module.py  training_module.py
example_scripts/: mnist_relu_4_1024-pgd-training.py
experiments/: jobscript.sh  test_run.py
