[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adversarial-training-box"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Aaron Berger", email = "aaronberger@hotmail.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/adversarial-training-box#readme"
Issues = "https://github.com/unknown/adversarial-training-box/issues"
Source = "https://github.com/unknown/adversarial-training-box"

[tool.hatch.version]
path = "adversarial_training_box/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:adversarial_training_box tests}"

[tool.coverage.run]
source_pkgs = ["adversarial_training_box", "tests"]
branch = true
parallel = true
omit = [
  "adversarial_training_box/__about__.py",
]

[tool.coverage.paths]
adversarial_training_box = ["adversarial_training_box", "*/adversarial-training-box/adversarial_training_box"]
tests = ["tests", "*/adversarial-training-box/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
